2008-07-10  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/core/path.py: New way to get Chimera paths. Use
	pkg_resources to get correct installation place or just guess.

	* src/scripts/chimera-focus:
	* src/scripts/chimera-cam:
	* src/scripts/chimera-dome:
	* src/scripts/chimera-tel:
	* src/chimera/controllers/site/main.py: All modified to use ChimeraPath.

	* setup.cfg:
	* setup.py: No more zip_safe. Eggs crash classloader. Not
	installing as egg anymore.

2008-06-10  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/interfaces/cameradriver.py: Fix typos.

	* src/chimera/controllers/site/main.py: Broad exception handling.

	* src/chimera/core/manager.py: More exception handling.

	* src/chimera/instruments/camera.py: There was a BIG bug here. In
	the finally statement, we were returning a tuple, and according to
	Python's manual, in a finally, if we break or return, we loose the
	exception!!! The result was that any exception occuring in
	drv.expose was silently ingored!!!


2008-06-07  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/drivers/fakecamera.py: Fixes on random number
	geeration on flat creation routine. We were using N.fromfunction
	without actually using the indices, returning a scalar value and
	to an array.

	Fix issue #7.

	Patch from Isaac Richter.

2008-06-06  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/scripts/chimera-cam:
	Add "--force-display" option to force display even if texp<5.

	Fix issue where driver is never set to camera.getDriver() when
	using a remote camera instrument.

	Fix issue where chimera-cam --info gives incorrect (or no) camera
	driver.

	* src/scripts/chimera-tel:
	Fix issue where driver is never set to telescope.getDriver() when
	using a remote telescope instrument.

	Fix issue where chimera-tel --info gives incorrect (or no)
	telescope driver

	* src/scripts/chimera-dome:

	Add "-t"/"--telescope" option to tell the dome what telescope to
	track.
